Feature ETP-3591: Fix Sonar issues across modules